--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.canvas {
+width: 720px;
+height: 480px;
+border: 1px solid #000;
+background-color: black;
+}
 
 @media (max-width: 700px) {
   .hidemobile {
