--- a/styles/standard.css
+++ b/styles/standard.css
@@ -17,17 +17,17 @@ body {
 }
 
 @font-face {
-  font-family: "Orbitron", sans-serif;
+  font-family: "Orbitron";
   src: url(./assets/fonts/Orbitron-VariableFont_wght.ttf);
 }
 
 @font-face {
-  font-family: "Raleway", sans-serif;
+  font-family: "Raleway";
   src: url(./assets/fonts/Raleway-VariableFont_wght.ttf);
 }
 
 @font-face {
-  font-family: "Expletus Sans", sans-serif;
+  font-family: "Expletus Sans";
   src: url(./assets/fonts/ExpletusSans-VariableFont_wght.ttf);
 }
 
