--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,35 @@
   background-color: black;
 }
 
+@media (orientation: portrait) {
+  #canvas {
+    display: none;
+  }
+
+  #overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* slightly darker for clarity */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* make sure it's above everything */
+  }
+
+  #overlay::before {
+    content: "Please rotate your device";
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 1rem;
+  }
+}
+
+
+
 @media (max-width: 700px) {
   .hidemobile {
     display: none;
