--- a/styles/standard.css
+++ b/styles/standard.css
@@ -17,8 +17,8 @@ body {
 }
 
 @font-face {
-  font-family: "Orbitron";
-  src: url(../assets/fonts/Orbitron-VariableFont_wght.ttf);
+  font-family: "Kablammo";
+  src: url(../assets/fonts/Kablammo-Regular-VariableFont_MORF.ttf);
 }
 
 @font-face {
@@ -34,8 +34,8 @@ body {
 h1,
 h2,
 h3 {
-  font-family: "Orbitron", sans-serif;
-  text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.9);
+  font-family: "Kablammo", sans-serif;
+  text-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
