--- a/styles/style.css
+++ b/styles/style.css
@@ -5,12 +5,26 @@
   background-color: black;
 }
 
+.overlay {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* slightly darker for clarity */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+
+
 @media (orientation: portrait) {
   #canvas {
     display: none;
   }
 
-  #overlay {
+  #overlay-portrait {
     position: absolute;
     top: 0;
     left: 0;
@@ -20,10 +34,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* make sure it's above everything */
+    z-index: 2;
   }
 
-  #overlay::before {
+
+
+  #overlay-portrait::before {
     content: "Please rotate your device";
     color: white;
     font-size: 1.5rem;
