--- a/styles/standard.css
+++ b/styles/standard.css
@@ -14,6 +14,10 @@ body {
   align-items: center;
   font-family: "Raleway", sans-serif;
   gap: 10px;
+  background-image: url(../assets/img/sitebackground.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 @font-face {
