--- a/styles/style.css
+++ b/styles/style.css
@@ -5,13 +5,12 @@
   background-color: black;
 }
 
-
 .overlay {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); 
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,13 +31,54 @@
   #overlay-portrait::before {
     content: "Please rotate your device";
     color: white;
-
   }
 }
 
 @media (max-width: 700px) {
   .hidemobile {
     display: none;
+  }
+
+  #canvas {
+    max-width: 380px;
+  }
+
+  #header {
+    height: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-inline: 5px;
+  }
+
+  #footer {
+    height: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-inline: 5px;
+  }
+}
+
+@media (max-height: 500px) {
+  .hidemobile {
+    display: none;
+  }
+
+  #canvas {
+    max-height: 300px;
+  }
+
+  #header {
+    height: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-inline: 5px;
+  }
+
+  #footer {
+    height: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-inline: 5px;
   }
 }
 
