--- a/styles/standard.css
+++ b/styles/standard.css
@@ -10,12 +10,12 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   font-family: "Raleway", sans-serif;
   gap: 10px;
   background-image: url(../assets/img/sitebackground.jpg);
-  background-size: cover;
+  background-size:cover;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -100,17 +100,13 @@ a:hover {
   justify-content: center;
   align-items: center;
   text-align: center;
-  gap: 10px;
+  gap: 20px;
   flex-wrap: wrap;
-  padding-inline: 10px;
   margin: 0;
 }
 
 #footer {
   max-height: 50px;
-  padding-inline: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -121,13 +117,12 @@ a:hover {
   flex-grow: 1;
   max-width: 1440px;
   width: 100%;
-  padding-inline: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 50px;
+  gap: 10px;
   text-align: center;
   box-sizing: border-box;
 }
