--- a/styles/style.css
+++ b/styles/style.css
@@ -6,15 +6,18 @@
 }
 
 .overlay {
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  gap: 5px;
   z-index: 1;
   color: white;
 }
