--- a/styles/standard.css
+++ b/styles/standard.css
@@ -135,3 +135,8 @@ a:hover {
   text-align: center;
   box-sizing: border-box;
 }
+
+.main-dark {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+}
